--- a/css/ui.scss
+++ b/css/ui.scss
@@ -267,7 +267,7 @@ section {
 .banner {
   height:300px;
   background: url(../images/banner.jpg) bottom no-repeat;
-  background-size: cover;
+  background-size: contain;
   background-attachment : fixed;
   .title-wrap {
     width:100%;
