--- a/css/common/_base.scss
+++ b/css/common/_base.scss
@@ -17,7 +17,7 @@
 
 /* HTML5 display-role reset for older browsers */
 body {
-  font-family: "NanumMyeongjo", sans-serif;
+  font-family: 'NanumMyeongjo', sans-serif;
   font-weight: 500;
   font-size: 15px;
   line-height:1.7;
