--- a/css/ui.css
+++ b/css/ui.css
@@ -2,7 +2,6 @@
 section {
   position: relative;
   text-align: center;
-  overflow: hidden;
 }
 
 #main {
@@ -10,12 +9,57 @@ section {
   margin: 0 auto;
 }
 
+.delighter {
+  -webkit-transition: all 0.7s ease-out;
+  transition: all 0.7s ease-out;
+  -webkit-transform: translateY(50%);
+  transform: translateY(50%);
+  opacity: 0;
+}
+.delighter.started {
+  transform: none;
+  opacity: 1;
+}
+
 .visual {
   text-align: right;
+}
+.visual.active .img-box {
+  transform: scaleY(1);
+  -webkit-transform: scaleY(1);
+}
+.visual.active img {
+  opacity: 1;
+  -webkit-transform: scale(1);
+  transform: scale(1);
+}
+.visual.active .visual-title {
+  transform: none;
+  opacity: 1;
 }
 .visual-img {
   padding: 0 10vw 15vw;
   position: relative;
+}
+.visual-img .img-box {
+  overflow: hidden;
+  background-color: rgba(241, 192, 191, 0.2);
+  will-change: transform;
+  -webkit-transform: scaleY(0);
+  transform: scaleY(0);
+  -webkit-transform-origin: top;
+  transform-origin: top;
+  -webkit-transition: transform 1s cubic-bezier(0.25, 0, 0.1, 1);
+  transition: transform 1s cubic-bezier(0.25, 0, 0.1, 1);
+}
+.visual-img img {
+  opacity: 0;
+  -webkit-transform: scale(1.3);
+  transform: scale(1.3);
+  transform: scale(1.3);
+  transition: transform 1s cubic-bezier(0.25, 0, 0.1, 1), opacity 0.8s cubic-bezier(0.25, 0, 0.1, 1);
+  height: 100%;
+  transition-delay: 1s;
 }
 .visual-title {
   font-family: "AnsteryScript", sans-serif;
@@ -24,6 +68,9 @@ section {
   bottom: 0;
   font-size: 4rem;
   line-height: 1;
+  transition: all 0.8s ease-out 1.3s;
+  transform: translateY(50%);
+  opacity: 0;
 }
 .visual .date {
   font-family: "CormorantUnicase", sans-serif;
@@ -39,7 +86,13 @@ section {
 }
 
 .intro {
-  padding: 100px 0 60px;
+  padding: 120px 0 60px;
+  transition: all 1s ease-out;
+  opacity: 0;
+}
+.intro.active {
+  opacity: 1;
+  transition-delay: 2s;
 }
 
 .profile {
@@ -65,27 +118,50 @@ section {
   font-size: 0.9em;
 }
 
+.gallery-slider {
+  overflow: hidden;
+}
 .gallery-top {
   position: relative;
   height: 80%;
-  width: calc(100% - 20px);
-  margin: 0 10px;
+  width: 100%;
 }
 .gallery-thumbs {
   height: 20%;
   box-sizing: border-box;
-  padding: 10px 0;
+  padding: 10px 0 30px;
 }
-.gallery-thumbs .swiper-wrapper {
-  margin-left: -33%;
+.gallery-thumbs .swiper-pagination {
+  bottom: 0;
 }
-.gallery-thumbs .swiper-wrapper.reset {
-  margin-left: 0;
+.gallery-thumbs .swiper-pagination-bullet {
+  opacity: 1;
+  background: #ddd;
+  width: 6.5px;
+  height: 6.5px;
+}
+.gallery-thumbs .swiper-pagination-bullet-active {
+  background: #1A1A40;
 }
 .gallery-thumbs .swiper-slide {
-  width: 30%;
-  height: 100%;
+  position: relative;
+  width: 40%;
+  overflow: hidden;
   opacity: 0.6;
+}
+.gallery-thumbs .swiper-slide:before {
+  content: "";
+  display: block;
+  padding-top: 100%;
+}
+.gallery-thumbs .swiper-slide img {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  object-fit: cover;
+  vertical-align: middle;
 }
 .gallery-thumbs .swiper-slide-active {
   opacity: 1;
@@ -199,6 +275,21 @@ section {
 .contact .desc {
   font-size: 0.85em;
   margin: 50px 0;
+}
+.contact .sub {
+  font-size: 0.85em;
+  padding-top: 100px;
+  position: relative;
+}
+.contact .sub:before {
+  content: "";
+  width: 20px;
+  height: 1px;
+  background: #000000;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 75px;
 }
 .contact .grid + .grid {
   margin-top: 15px;
