--- a/css/ui.scss
+++ b/css/ui.scss
@@ -29,17 +29,15 @@ section {
   text-align: right;
 
   &.active {
-    .img-box {
+    .bg {
       transform: scaleY(1);
       -webkit-transform: scaleY(1);
     }
-
-    img {
+    .img {
       opacity: 1;
       -webkit-transform: scale(1);
       transform: scale(1);
     }
-
     .visual-title {
       transform: none;
       opacity: 1;
@@ -49,8 +47,11 @@ section {
   &-img {
     padding: 0 10vw 15vw;
     position: relative;
-
-    .img-box {
+    height:70vh;
+    .inner {
+    }
+    .bg {
+      width:100%;height:100%;
       overflow: hidden;
       background-color: rgba(241, 192, 191, .2);
       will-change: transform;
@@ -58,14 +59,16 @@ section {
       @include prefix(transform-origin, top, webkit);
       @include prefix(transition, transform 1s cubic-bezier(.25, 0, .1, 1), webkit);
     }
-
-    img {
+    .img {
       opacity: 0;
       @include prefix(transform, scale(1.3), webkit);
       transform: scale(1.3);
       transition: transform 1s cubic-bezier(.25, 0, .1, 1), opacity .8s cubic-bezier(.25, 0, .1, 1);
       height: 100%;
       transition-delay: 1s;
+      background-size:cover;
+      background-position: center bottom;
+      width:100%;
     }
   }
 
