--- a/css/ui.css
+++ b/css/ui.css
@@ -9,14 +9,14 @@ section {
   margin: 0 auto;
 }
 
-.delighter {
-  -webkit-transition: all 0.7s ease-out;
+.eft {
   transition: all 0.7s ease-out;
-  -webkit-transform: translateY(50%);
+  -webkit-transition: all 0.7s ease-out;
   transform: translateY(50%);
+  -webkit-transform: translateY(50%);
   opacity: 0;
 }
-.delighter.started {
+.eft.started {
   transform: none;
   opacity: 1;
 }
@@ -48,19 +48,19 @@ section {
   overflow: hidden;
   background-color: rgba(241, 192, 191, 0.2);
   will-change: transform;
-  -webkit-transform: scaleY(0);
   transform: scaleY(0);
-  -webkit-transform-origin: top;
+  -webkit-transform: scaleY(0);
   transform-origin: top;
-  -webkit-transition: transform 1s cubic-bezier(0.25, 0, 0.1, 1);
+  -webkit-transform-origin: top;
   transition: transform 1s cubic-bezier(0.25, 0, 0.1, 1);
+  -webkit-transition: transform 1s cubic-bezier(0.25, 0, 0.1, 1);
 }
 .visual-img .img {
   opacity: 0;
+  transform: scale(1.3);
   -webkit-transform: scale(1.3);
-  transform: scale(1.3);
-  transform: scale(1.3);
   transition: transform 1s cubic-bezier(0.25, 0, 0.1, 1), opacity 0.8s cubic-bezier(0.25, 0, 0.1, 1);
+  -webkit-transition: transform 1s cubic-bezier(0.25, 0, 0.1, 1), opacity 0.8s cubic-bezier(0.25, 0, 0.1, 1);
   height: 100%;
   transition-delay: 1s;
   background-size: cover;
@@ -75,7 +75,9 @@ section {
   font-size: 4rem;
   line-height: 1;
   transition: all 0.8s ease-out 1.3s;
+  -webkit-transition: all 0.8s ease-out 1.3s;
   transform: translateY(50%);
+  -webkit-transform: translateY(50%);
   opacity: 0;
 }
 .visual .date {
@@ -94,6 +96,7 @@ section {
 .intro {
   padding: 120px 0 60px;
   transition: all 1s ease-out;
+  -webkit-transition: all 1s ease-out;
   opacity: 0;
 }
 .intro.active {
@@ -405,8 +408,10 @@ section {
   right: 0;
   z-index: 97;
   transform: translateY(100%);
+  -webkit-transform: translateY(100%);
   text-align: center;
-  transition: 0.3s;
+  transition: 0.3s all ease-out;
+  -webkit-transition: 0.3s all ease-out;
 }
 .message-box span {
   display: inline-flex;
