--- a/css/common.css
+++ b/css/common.css
@@ -12,7 +12,7 @@
 
 /* HTML5 display-role reset for older browsers */
 body {
-  font-family: "NanumMyeongjo", sans-serif;
+  font-family: "NanumMyeongjo", -apple-system, "맑은 고딕", "malgun gothic", "AppleGothicNeoSD", "Apple SD 산돌고딕 Neo", "Microsoft NeoGothic", sans-serif;
   font-weight: 500;
   font-size: 15px;
   line-height: 1.7;
