--- a/css/ui.scss
+++ b/css/ui.scss
@@ -107,6 +107,11 @@ section {
     opacity: 1;
     transition-delay: 2s;
   }
+  .text {
+    font-size: .85em;
+    padding-bottom: 60px;
+    position: relative;
+  }
 }
 
 .profile {
@@ -133,6 +138,11 @@ section {
 .gallery {
   &-slider {
     overflow: hidden;
+    &.started {
+      .gallery-thumbs {
+         opacity: 1;
+      }
+    }
   }
   &-top {
     position: relative;
@@ -143,6 +153,10 @@ section {
     height: 20%;
     box-sizing: border-box;
     padding: 10px 0 30px;
+    transition: all .7s ease-out;
+    -webkit-transition: all .7s ease-out;
+    transition-delay:1.5s;
+    opacity: 0;
     .swiper {
       &-pagination {
         bottom: 0;
@@ -501,4 +515,36 @@ section {
   height: 15px;
   background: url(../images/icon/envelope-solid.svg) center no-repeat;
   background-size: cover;
+}
+
+
+@include tablet {
+  body {
+    font-size: 16px;
+  }
+  #main {
+    max-width:750px;
+  }
+  .visual {
+    &-img {
+      height: 85vh;
+      padding: 0 6vw 10vh;
+    }
+    &-title {
+      bottom: 2vw;
+    }
+    .date {
+      padding: 1vw 6vw 1vw 0;
+    }
+  }
+  .location {
+    .guide {
+padding:0 4vw;
+    }
+    .map {
+      > div {
+        width:750px!important;
+      }
+    }
+  }
 }
