--- a/css/ui.scss
+++ b/css/ui.scss
@@ -529,6 +529,7 @@ section {
     &-img {
       height: 85vh;
       padding: 0 6vw 10vh;
+      background-position: center;
     }
     &-title {
       bottom: 2vw;
