--- a/css/ui.css
+++ b/css/ui.css
@@ -479,6 +479,8 @@ section {
   .visual-img {
     height: 85vh;
     padding: 0 6vw 10vh;
+  }
+  .visual-img .img {
     background-position: center;
   }
   .visual-title {
