--- a/css/ui.scss
+++ b/css/ui.scss
@@ -523,28 +523,33 @@ section {
     font-size: 16px;
   }
   #main {
-    max-width:750px;
+    max-width: 750px;
   }
   .visual {
     &-img {
       height: 85vh;
       padding: 0 6vw 10vh;
-      background-position: center;
+      .img {
+        background-position: center;
+      }
     }
+
     &-title {
       bottom: 2vw;
     }
+
     .date {
       padding: 1vw 6vw 1vw 0;
     }
   }
   .location {
     .guide {
-padding:0 4vw;
+      padding: 0 4vw;
     }
+
     .map {
       > div {
-        width:750px!important;
+        width: 750px !important;
       }
     }
   }
